--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-tensorflow==2.15.0
+torch==2.2.2
+torchvision==0.17.2
 streamlit==1.36.0
 pillow==10.3.0
 numpy==1.26.4
@@ -7,3 +8,4 @@ opencv-python==4.8.1.78
 scikit-learn==1.3.0
 pandas==2.1.2
 tqdm==4.66.1
+
