--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 streamlit==1.36.0
 torch==2.2.2
 torchvision==0.17.2
-Pillow
-numpy
-opencv-python
-
-
-
+Pillow==10.3.0
+numpy==1.26.4
+opencv-python-headless==4.8.1.78
